--- a/1.0 Advanced Project/style.css
+++ b/1.0 Advanced Project/style.css
@@ -21,6 +21,7 @@ section {
 
 .container {
     padding: 50px 0;
+    width: 100%;
 }
 
 .row {
@@ -179,7 +180,7 @@ nav {
     padding: 0 20px;
 }
 
-#personal-logo {
+.personal-logo {
     filter: invert(0);
     width: 50px;
     height: 50px;
@@ -282,4 +283,41 @@ nav {
 
 .project__description--paragraph {
     margin: 16px 0;
+}
+
+
+/* 
+
+    Footer
+    
+*/
+
+
+footer {
+    background-color: #242424;
+    display: flex;
+    padding: 6% 0;
+}
+
+.footer__row {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.footer__personal-logo {
+    width: 100px;
+}
+
+.footer__socials--list {
+    width: 100%;
+    max-width: 500px;
+    display: flex;
+    justify-content: space-around;
+    margin: 20px 0;
+}
+
+.footer__social--link,
+.footer__copyright {
+    color: white;
 }
